improved dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="TextUtils is a webste that helps you to manipulate your text in the way you want to." />
+  <meta name="description" content="TextUtils is a website that helps you to manipulate your text in the way you want to." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
